# SmartPointer

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/basic/: refbase.h  smartpointer.h
